-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Linux commit v5.19-rc3-392-g5490da4f06d1
fs: Add aops->migrate_folio
Linux commit v5.19-rc4-52-ge33c267ab70d
mm: shrinkers: provide shrinkers with names
From Linux commit v5.19-rc5-17-g0c5fd887d2bb
acl: move idmapped mount fixup into vfs_
etxattr()
Until Linux commit v6.0-rc3-6-g6344e66970c6
xattr: constify value argument in vfs_setxattr()
Linux commit v5.19-10313-geba2d3d79829
get rid of non-advancing variants
iov_iter_get_pages_alloc2() replaces iov_iter_get_pages_alloc()
Linux commit v5.19-rc2-1-g94dfc73e7cf4
treewide: uapi: Replace zero-length arrays with flexible-array
members
Adjust wiretest to handle flexible array when sizeof(fiemap->fm_extents) is undefined.